<resources>
    <string name="app_name">Math Battle</string>
    <string name="tvBienvenida">BENVINGUT A MATH BATTLE</string>
    <string name="tvEmail">El teu email: </string>
    <string name="tvHintEmail">email@exemple.com</string>
    <string name="tvPassword">La teva contrasenya: </string>
    <string name="tvHintPassword">Contrasenya</string>
    <string name="btnLogin">Iniciar sessió</string>
    <string name="tvLogin">Login</string>
    <string name="tvNoUsuario">No tens usuari?</string>
    <string name="btnIrRegistro">REGISTRAR-SE</string>
    <string name="tvRegisterActivity">REGISTRE</string>
    <string name="btnIrLogin">INICIAR SESSIÓ</string>
    <string name="tvSiUsuario">Ja tens un usuari?</string>
    <string name="btnCrearClasse">Botó per crear una classe</string>
    <string name="tvNom">El teu nom:</string>
    <string name="tvHintNom">Nom</string>
    <string name="tvCognom">El teu cognom:</string>
    <string name="tvHintCognom">Cognom</string>
    <string name="tvCodiSala">CODI DE LA SALA</string>
    <string name="tvStatus">ESTAT</string>
    <string name="tvCodi">CODI</string>
    <string name="btnComençar">COMENÇAR</string>
    <string name="tvCrearClasse">CREAR CLASSE</string>
    <string name="tvNomClasse">Nom de la classe</string>
    <string name="btnCrear">CREAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnUnirse">UNEIX-TE</string>
    <string name="ToastClasse">Has de posar un nom a la classe</string>
    <string name="ToastCampos">Has de omplir tots els camps</string>
    <string name="tvDificultad">Selecciona la dificultat</string>


    <string name="title_activity_classes">ClassesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stats">Estadístiques</string>
</resources>