<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="50dp"
        android:background="#72BAE8"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRegisterActivity"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"
                android:textSize="25sp"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/tvHintEmail"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPassword"
                android:textSize="25sp"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/tvHintPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="El teu nom:"
                android:textSize="25sp"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNom"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/tvHintPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="El teu cognom:"
                android:textSize="25sp"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCognom"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/tvHintPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegistre"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ADD8E6"
                android:text="@string/btnIrRegistro"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSiUsuario"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIrLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#ADD8E6"
                android:text="@string/btnLogin"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>